# bootalog

./: Makefile  README
doc/: language-spec
examples/: ancestors.blr  parents.bld  simple-join.bl
native/: configure.ac
native/src/: Makefile.am  check_mem_intern.c  check_table.c  istrings.c  istrings.h  mem_intern.c  mem_intern.h  mem_intern_ocaml.c  ptr_ocaml.c  table.c  table.h  table_ocaml.c  test.c
src/: Makefile  access_path.ml  atom.ml  base.ml  base_literal.ml  base_rule.ml  calspec_frontend.ml  calspec_frontend.mli  combined_table.ml  compare.ml  database.ml  dynamic_programming.ml  env.ml  error.ml  error.mli  errors.ml  eval.ml  fact.ml  frontend.ml  getopt.ml  getopt.mli  label.ml  lexer.mll  literal.ml  native_table.ml  option.ml  parser.ml  predicate.ml  predicate_set.ml  primop_interface.ml  primops.ml  program.ml  repl.ml  rule.ml  rule_set.ml  rules.ml  signature.ml  simple_table.ml  stratification.ml  stratified_ruleset.ml  (+7 more)
test/: Makefile  error_test_helper.ml  stratum_test_helper.ml  test_access_modes.ml  test_dynamic_programming.ml  test_eval.ml  test_frontend.ml  test_getopt.ml  test_labels.ml  test_native.ml  test_primops.ml  test_stratification.ml  test_strlib.ml  test_table.ml
